Extensible EvoAlgorithm refactoring ctd